--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: Bindings to 'smcrypto' <https://github.com/zhuobie/smcrypto>: a 'Ru
 License: MIT + file LICENSE
 URL: https://github.com/zhuobie/smcryptoR
 BugReports: https://github.com/zhuobie/smcryptoR/issues
+Depends: R (>= 4.2)
 SystemRequirements: Cargo (Rust's package manager), rustc
 Biarch: true
 RoxygenNote: 7.2.3
