--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: smcryptoR
 Type: Package
 Title: ShangMi(SM) Cryptographic Algorithms(SM2/SM3/SM4)
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: person("Meng", "Yu", role = c("aut", "cre"), email = "610074@gmail.com",
     comment = c(ORCID = "0009-0005-9794-5522"))
 Description: Bindings to 'smcrypto' <https://github.com/zhuobie/smcrypto>: a 'Rust'
@@ -18,6 +18,7 @@ Biarch: true
 RoxygenNote: 7.2.3
 NeedsCompilation: yes
 Packaged: 2023-11-20 12:47:21 UTC; Meng
+Author: Meng Yu [aut, cre] (<https://orcid.org/0009-0005-9794-5522>)
 Maintainer: Meng Yu <610074@gmail.com>
 Repository: CRAN
 Date/Publication: 2024-02-14 00:00:00 UTC
